# irmsd

./: .gitignore  CITATION.cff  CMakeLists.txt  README.md  codecov.yml  pyproject.toml
.github/workflows/: ci.yaml.tmp  docs.yaml  publish-test.yml  publish.yml  tests-and-coverage.yml  wheels-test.yml  wheels.yml
conda/recipe/: meta.yaml
docs/source/: cli.md  cli.rst  conf.py  index.md  index.rst  installation.md  installation.rst  package_reference.rst  scientific_background.md
docs/source/reference/: irmsd.api.axis_exposed.rst  irmsd.api.canonical_exposed.rst  irmsd.api.cn_exposed.rst  irmsd.api.irmsd_exposed.rst  irmsd.api.rmsd_exposed.rst  irmsd.api.rst  irmsd.api.xyz_bridge.rst  irmsd.rst  irmsd.utils.ase_io.rst  irmsd.utils.cmds.rst  irmsd.utils.rdkit_io.rst  irmsd.utils.rst  irmsd.utils.utils.rst
src/irmsd/: __init__.py  _lib.py  _version.py  cli.py
src/irmsd/_fortran/: CMakeLists.txt
src/irmsd/_fortran/crest_mods/: CMakeLists.txt  canonical.f90  hungarian.f90  irmsd_module.f90
src/irmsd/_fortran/fmods/: CMakeLists.txt  axis_exposed.f90  canonical_exposed.f90  cn_exposed.f90  irmsd_exposed.f90  rmsd_exposed.f90  sorter_exposed.f90  strucrd.f90  term_ui.f90  utilities.f90  xyz_bridge.f90
src/irmsd/_fortran/template/: irmsd_tool.f90
src/irmsd/api/: axis_exposed.py  canonical_exposed.py  cn_exposed.py  irmsd_exposed.py  rmsd_exposed.py  sorter_exposed.py  xyz_bridge.py
src/irmsd/bindings/: axis_exposed.py  canonical_exposed.py  cn_exposed.py  irmsd_exposed.py  linalg.py  rmsd_exposed.py  sorter_exposed.py  xyz_bridge.py
src/irmsd/core/: mol.py  molecule.py
src/irmsd/interfaces/: ase_io.py  cmds.py  mol_interface.py  rdkit_io.py
src/irmsd/sorting/: __init__.py  group_by.py  representatives.py
src/irmsd/utils/: ase_io.py  cmds.py  io.py  printouts.py  rdkit_io.py  utils.py  xyz.py
src/yourpkg/: __init__.py  _lib.py  cli.py
src/yourpkg/_fortran/: CMakeLists.txt
src/yourpkg/_fortran/fmods/: linalg.f90
src/yourpkg/api/: linalg.py
tests/: conftest.py  data.py  test_chemical_examples.py  test_cli.py  test_saxpy.py
tests/api/: test_axis_exposed.py  test_canonical.py  test_cn_exposed.py  test_irmsd_exposed.py  test_rmsd_exposed.py  test_sorter_exposed.py
tests/bindings/: test_bindings_axis_exposed.py  test_bindings_canonical_exposed.py  test_bindings_cn_exposed.py  test_bindings_irmsd_exposed.py  test_bindings_rmsd_exposed.py
tests/core/: test_molecule.py
tests/data/: pentane_100_ensemble.xyz
tests/data/ensembles_shuffled/: bpti_100_shuffled.xyz  lj75_100_shuffled.xyz  pentane_100_shuffled.xyz  taxol_100_shuffled.xyz  tppo_100_shuffled.xyz  water21_100_shuffled.xyz
tests/fixtures/: data.py
tests/helpers/: utils.py
tests/interfaces/: test_ase_io.py  test_cmds.py  test_rdkit_io.py
tests/sorting/: test_delta_irmsd_list.py  test_group_by.py  test_sort_by_value.py  test_sorter_irmsd.py  test_sorting_representatives.py
tests/utils/: test_ase_io.py  test_cmds.py  test_io.py  test_rdkit_io.py  test_write_structures.py  test_xyz_io.py
