[build-system]
requires = ["scikit-build-core>=0.10", "numpy>=2.0"]
build-backend = "scikit_build_core.build"

[project]
name = "irmsd"
version = "0.0.0a1"
description = "irmsd: A package for the calculation of the permutation-invariant root-mean-square-deviation (RMSD) of atomic positions."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Philipp Pracht" }, { name = "Tobias Kaczun"}]
requires-python = ">=3.10"
dependencies = ["numpy>=2.0"]

[project.optional-dependencies]
ase = ["ase>=3.22.1"]
rdkit = ["rdkit>=2025.9.2"]
dev = ["pytest", "pytest-cov"]

[project.urls]
Homepage = "https://github.com/pprcht/irmsd"
Issues = "https://github.com/pprcht/irmsd/issues"

[tool.scikit-build]
build-dir = "build"
editable.mode = "redirect"
wheel.packages = ["src/irmsd"]
wheel.expand-macos-universal-tags = true

[project.scripts]
irmsd = "irmsd.cli:main"

[tool.cibuildwheel]
build = ["cp310-*", "cp311-*", "cp312-*", "cp313-*"]
skip = ["pp*", "*-musllinux*"]
test-command = "pytest -q {project}/tests"
test-requires = ["pytest", "numpy"]

[tool.cibuildwheel.linux]
before-all = "yum install -y gcc-gfortran"
environment = { FC = "gfortran" }

[tool.cibuildwheel.macos]
before-all = """
brew install gcc
GFORTRANS=$(ls "$(brew --prefix)"/bin/gfortran-[0-9]* 2>/dev/null || true)
if [ -z "$GFORTRANS" ]; then
  echo "No gfortran-* binaries found in $(brew --prefix)/bin" >&2
  exit 1
fi
# Pick the highest version numerically by the suffix
GFORTRAN_BIN=$(printf '%s\n' $GFORTRANS | sort -t- -k2,2n | tail -n1)
echo "Using Fortran compiler: $GFORTRAN_BIN"
ln -sf "$GFORTRAN_BIN" "$(brew --prefix)/bin/gfortran"
which gfortran || { echo "gfortran still not on PATH"; exit 1; }
"""
environment = { FC = "gfortran" }



[tool.cibuildwheel.windows]
before-all = "choco install mingw"
environment = { FC = "gfortran" }



