[build-system]
requires = ["scikit-build-core>=0.10", "numpy>=2.0"]
build-backend = "scikit_build_core.build"

[project]
name = "irmsd"
version = "0.0.0a"
description = "irmsd: A package for the calculation of the permutation-invariant root-mean-square-deviation (RMSD) of atomic positions."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Philipp Pracht" }, { name = "Tobias Kaczun"}]
requires-python = ">=3.9"
dependencies = ["numpy>=2.0"]

[project.optional-dependencies]
ase = ["ase>=3.22.1"]
dev = ["pytest", "pytest-cov"]
docs = ["sphinx>=8.2.3", "shibuya"]

[project.urls]
Homepage = "https://github.com/pprcht/irmsd"
Issues = "https://github.com/pprcht/irmsd/issues"

[tool.scikit-build]
build-dir = "build"
editable.mode = "redirect"
wheel.packages = ["src/irmsd"]
wheel.expand-macos-universal-tags = true

[project.scripts]
irmsd = "irmsd.cli:main"


